syntax = "proto3";
package v1;

import "utils.proto";
import "coin.proto";
import "currency.proto";
import "transaction.proto";
import "kyc.proto";
import "stats.proto";
import "wallet.proto";
import "institution.proto";

option go_package="v1";

service V1 {
  // Health submission
  rpc HealthSubmission (utils.MessageRequest) returns (utils.HealthStatusResponse);
  // Health check
  rpc HealthCheck (utils.MessageRequest) returns (utils.HealthStatusResponse);
  // Wallet balances
  rpc WalletBalances (utils.AuthedRequest) returns (currency.BalancesResponse);
  // Wallet balance
  rpc WalletBalance (coin.Request) returns (currency.BalanceResponse);
  // Wallet interest
  rpc WalletInterest (coin.Request) returns (wallet.InterestResponse);
  // Wallet deposit
  rpc WalletDeposit (coin.Request) returns (wallet.AddressResponse);
  // Wallet withdraw
  rpc WalletWithdraw (wallet.WithdrawalRequest) returns (wallet.WithdrawalResponse);
  // Transaction status
  rpc TransactionStatus (transaction.StatusRequest) returns (transaction.StatusResponse);
  // Get KYC Status
  rpc GetKYC (utils.AuthedRequest) returns (kyc.StateResponse);
  // Submit KYC Status
  rpc SubmitKYC (kyc.SubmitRequest) returns (kyc.SubmitResponse);
  // Get Supported Currencies
  rpc SupportedCurrencies (utils.Empty) returns (currency.SupportedResponse);
  // Get Interest Rates
  rpc InterestRates (utils.AuthedRequest) returns (currency.InterestRatesResponse);
  // Get Community Stats
  rpc Community (utils.Empty) returns (stats.CommunityResponse);
  // Get Institution Users
  rpc InstitutionUsers (utils.AuthedRequest) returns (institution.UsersResponse);
  // Get Institution User
  rpc InstitutionUser (utils.AuthedRequest) returns (institution.UserResponse);
  // Get Institution Metadata
  rpc InstitutionMetadata (institution.IdRequest) returns (utils.StringResponse);
  // Get Institution Withdrawal Address
  rpc InstitutionWithdrawalAddress (institution.IdRequest) returns (wallet.AddressResponse);
}
